K8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-todo-cicd
  labels:
    app: node-todo-cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-todo-cicd
  template:
    metadata:
      labels:
        app: node-todo-cicd
    spec:
      containers:
        - name: node-todo-cicd
          image: nandini965/node-todo-cicd
          ports:
            - containerPort: 8000
