K8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-todo-service
spec:
  selector:
    app: node-todo-cicd
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      #nodePort: 32374  # Example NodePort
  type: LoadBalancerg
