K8s/manifests/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-todo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: node-todo-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-todo-app
                port:
                  number: 8000
                  #
